--- a/TwitterStatsApp/TwitterStatsApp/appsettings.json
+++ b/TwitterStatsApp/TwitterStatsApp/appsettings.json
@@ -1,10 +1,7 @@
 ﻿{
     "Credentials": {
-        "ConsumerKey": "Mj8zWBw9HBhjeIlKSJClhc9iq",
-        "ConsumerSecret": "XS9hptJNY8xswucMH0aXmPAYjL4itRhloXLSfvYpfDh4aUf4VZ",
-        "BearerToken": "AAAAAAAAAAAAAAAAAAAAACSNRQEAAAAAZt1%2Fuxt0PRc4swVBgAwN9Zxm8Ao%3DJdVHggsLoq5pPZy4Ap6DXWjA6ZTX2vuGx35EfYef3CR99ebd0M",
-        "AccessToken": "1412454218338811908-jfpKQZltvSsOoNp1xhHRdir8jRxwNW",
-        "AccessTokenSecret": "5A10kS20m0CpogIJFn6cURIOZWs5jsFj50gmXjclpTDti"
+        "ConsumerKey": "Your-CounsumerKey",
+        "ConsumerSecret": "Your-CounsumerSecretKey"
     },
     "EndpointUrl": {
         "TweetCount": "https://api.twitter.com/2/tweets/counts/recent?query=",
