--- a/TwitterStatsApp/appsettings.json
+++ b/TwitterStatsApp/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
     "Credentials": {
-        "ConsumerKey": "Mj8zWBw9HBhjeIlKSJClhc9iq",
-        "ConsumerSecret": "XS9hptJNY8xswucMH0aXmPAYjL4itRhloXLSfvYpfDh4aUf4VZ"
+        "ConsumerKey": "Your-CounsumerKey",
+        "ConsumerSecret": "Your-CounsumerSecretKey"
     },
     "EndpointUrl": {
         "TweetCount": "https://api.twitter.com/2/tweets/counts/recent?query=",
